{{$NEXT}}

0.13    2013-08-25

- MetaCPAN was picking up the "# ABSTRACT" line in the conflicts module
  template.

- Removed some incorrect docs left over from 0.11


0.12    2013-08-25

- Fix bad conflicts entries added to metaspec (Karen is very sorry!), broken
  in v0.11. Sort of resolves RT #87123.


0.11    2013-07-22

- This plugin now adds conflicts type entries to the distro's Meta
  information, per the CPAN meta spec. Patch by Karen Etheridge. RT #87123.


0.10    2013-06-07

- The x_conflicts key added to the META.* files has now been renamed to
  x_breaks, per the Lancaster Consensus of 2013
  (https://github.com/Perl-Toolchain-Gang/toolchain-site/blob/master/lancaster-consensus.md).

- The generated check_conflicts sub added to the Makefile.PL or Build.PL file
  now checks the AUTOMATED_TESTING and NONINTERACTIVE_TESTING env vars to
  determine whether or not it should sleep for a few seconds so its message
  can be read. These env vars also come from the Lancaster Consensus.


0.09    2013-03-31

- If the plugin is run before a Makefile.PL or Build.PL can be generated, a
  fatal error is thrown. RT#80271. (Karen Etheridge)

- The files this plugin generates are now added early enough to be seen by any
  FileMunger plugins. However, the PkgVersion plugin still skips the generated
  *::Conflicts module because the package name of the generated module is
  intentionally hidden from PAUSE.

- Added an ABSTRACT to the generated module.


0.08    2011-07-22

- Add Dist::CheckConflicts to both configures and runtime dependency lists for
  modules which use this plugin.


0.07    2011-01-27

- Fix module name in pod.

- Add a dep on Dist::CheckConflicts 0.02 to modules which use this plugin (not
  0.01).


0.06    2011-01-16

- The dist.ini wouldn't load if a -script wasn't defined in the Conflicts
  config section.


0.05    2011-01-03

- The conflict warning added to your Makefile.PL or Build.PL now mentions the